# kdis

./: .clang-format-ignore  .clang-tidy  .cmake-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPCHECK.cfg  Doxyfile.in  KConfig.hpp.in  KDIS_Change_Log.htm  LICENSE  README.md  ROADMAP.md  config.hpp.in
KDIS/: CMakeLists.txt  KDIS_Change_Log.htm  KDataStream.h  KEncodersDecoders.h  LICENSE.txt  Readme.txt
KDIS/DataTypes/: APA.cpp  AcousticEmitterSystem.h  AggregateIdentifier.h  AggregateMarking.cpp  AggregateMarking.h  AntennaLocation.cpp  AntennaLocation.h  ArealObjectAppearance.cpp  ArticulatedPart.h  AttachedPart.cpp  AttributeRecordSet.cpp  AttributeRecordSet.h  BoundingSphereRecord.cpp  BoundingSphereRecord.h  COMBICState.cpp  COMBICState.h  ClockTime.cpp  ConeRecord1.cpp  ConeRecord2.cpp  CryptoSystem.cpp  CryptoSystem.h  CulturalFeatureAppearance.cpp  CulturalFeatureAppearance.h  DataTypeBase.h  DeadReckoningParameter.cpp  DeadReckoningParameter.h  Descriptor.h  EllipsoidRecord1.h  EllipsoidRecord2.cpp  EllipsoidRecord2.h  EmissionSystem.cpp  EmissionSystem.h  EmitterSystem.cpp  EmitterSystem.h  EncodingScheme.h  EnhancedMode1Code.cpp  EntityCapabilities.h  EntityDestinationRecord.cpp  EntityDestinationRecord.h  EntityIdentifier.cpp  (+143 more)
KDIS/DataTypes/Enums/: EnumBurstDescriptor.h  EnumDescriptor.cpp  EnumDescriptor.h  EnumDesignator.cpp  EnumDesignator.h  EnumEmitter.h  EnumEntityInfoInteraction.cpp  EnumEntityInfoInteraction.h  EnumEntityManagement.h  EnumHeader.cpp  EnumHeader.h  EnumIFF.h  EnumInformationOperations.h  EnumMinefield.cpp  EnumMinefield.h  EnumSimulationManagement.h  EnumSupply.h  KDISEnums.h
KDIS/Examples/: CMakeLists.txt
KDIS/Examples/Building/: CMakeLists.txt
KDIS/Examples/Extending/: CMakeLists.txt
KDIS/Examples/Logging/: CMakeLists.txt
KDIS/Examples/PDU/: CMakeLists.txt
KDIS/Extras/: DIS_Logger_Record.cpp  DIS_Logger_Record.h  KConversions.h  KRef_Ptr.h  KUtils.h  Math.h  PDU_Factory_Filters.h
KDIS/KDIS/: KDataStream.cpp  KDataStream.h  KDefines.h  KEncodersDecoders.h  KSymbolicNames.h
KDIS/KDIS/DataTypes/: APA.cpp  APA.h  AcousticEmitterSystem.cpp  AcousticEmitterSystem.h  AggregateIdentifier.cpp  AggregateIdentifier.h  AggregateMarking.cpp  AggregateMarking.h  AggregateType.cpp  AggregateType.h  AirPlatformAppearance.cpp  AirPlatformAppearance.h  AntennaLocation.cpp  AntennaLocation.h  ArealObjectAppearance.cpp  ArealObjectAppearance.h  ArticulatedPart.cpp  ArticulatedPart.h  ArticulationParameters.cpp  ArticulationParameters.h  AttachedPart.cpp  AttachedPart.h  AttributeRecordSet.cpp  AttributeRecordSet.h  BeamData.cpp  BeamData.h  BeamStatus.cpp  BeamStatus.h  BoundingSphereRecord.cpp  BoundingSphereRecord.h  BurstDescriptor.cpp  BurstDescriptor.h  COMBICState.cpp  COMBICState.h  ClockTime.cpp  ClockTime.h  CommunicationsChannelType.cpp  CommunicationsChannelType.h  CommunicationsNodeID.cpp  CommunicationsNodeID.h  (+289 more)
KDIS/KDIS/Extras/: DIS_Logger_Playback.cpp  DIS_Logger_Playback.h  DIS_Logger_Record.cpp  DIS_Logger_Record.h  DeadReckoningCalculator.cpp  DeadReckoningCalculator.h  KConversions.h  KRef_Ptr.h  KUtils.h  Math.h  PDU_Factory.cpp  PDU_Factory.h  PDU_Factory_Filters.h
KDIS/KDIS/Network/: Connection.cpp  Connection.h  ConnectionAddressFilter.cpp  ConnectionAddressFilter.h  ConnectionSubscriber.h
KDIS/KDIS/PDU/: Bundle.cpp  Bundle.h  Header.h  Header6.cpp  Header6.h  Header7.cpp  Header7.h
KDIS/Network/: Connection.h  ConnectionAddressFilter.h
KDIS/PDU/: Bundle.cpp  Bundle.h  Header6.cpp  Header7.h
KDIS/PDU/Distributed_Emission_Regeneration/: Designator_PDU.cpp  Electromagnetic_Emission_PDU.h  IFF_PDU.h  SEES_PDU.h  Underwater_Acoustic_PDU.h
KDIS/PDU/Entity_Info_Interaction/: Attribute_PDU.cpp  Attribute_PDU.h  Collision_Elastic_PDU.cpp  Collision_PDU.cpp  Collision_PDU.h  Entity_State_PDU.cpp  Entity_State_PDU.h
KDIS/PDU/Entity_Management/: Aggregate_State_PDU.cpp  IsGroupOf_PDU.h  IsPartOf_PDU.cpp  IsPartOf_PDU.h  Transfer_Control_Request_PDU.cpp  Transfer_Control_Request_PDU.h
KDIS/PDU/Information_Operations/: IO_Action_PDU.cpp  IO_Action_PDU.h  IO_Header.cpp  IO_Header.h
KDIS/PDU/Live_Entity/: Articulated_Parts_PDU.h  LE_Detonation_PDU.cpp  LE_Detonation_PDU.h  LE_Fire_PDU.h  TSPI_PDU.h
KDIS/PDU/Logistics/: Logistics_Header.cpp  Logistics_Header.h  Repair_Complete_PDU.cpp  Repair_Response_PDU.cpp  Repair_Response_PDU.h  Resupply_Cancel_PDU.cpp  Resupply_Offer_PDU.cpp  Resupply_Offer_PDU.h  Resupply_Received_PDU.cpp  Service_Request_PDU.h
KDIS/PDU/Minefield/: Minefield_Data_PDU.h  Minefield_Header.h  Minefield_Query_PDU.cpp  Minefield_Query_PDU.h  Minefield_Response_NACK_PDU.cpp  Minefield_Response_NACK_PDU.h  Minefield_State_PDU.cpp  Minefield_State_PDU.h
KDIS/PDU/Radio_Communications/: Intercom_Control_PDU.cpp  Radio_Communications_Header.cpp  Receiver_PDU.h  Signal_PDU.h  Transmitter_PDU.cpp  Transmitter_PDU.h
KDIS/PDU/Simulation_Management/: Acknowledge_PDU.cpp  Action_Request_PDU.cpp  Action_Request_PDU.h  Action_Response_PDU.cpp  Action_Response_PDU.h  Comment_PDU.cpp  Data_Query_PDU.cpp  Data_Query_PDU.h  Event_Report_PDU.cpp  Event_Report_PDU.h  Remove_Entity_PDU.h  Set_Data_PDU.h  Simulation_Management_Header.cpp  Simulation_Management_Header.h  Start_Resume_PDU.cpp  Start_Resume_PDU.h  Stop_Freeze_PDU.h
KDIS/PDU/Simulation_Management_With_Reliability/: Comment_R_PDU.h  (+24 more)
KDIS/Tests/: CMakeLists.txt
test/: CMakeLists.txt  ConversionTests.cpp  PDU_EncodeDecode5.cpp  PDU_EncodeDecode7.cpp  PDU_ProtocolFamily7.cpp
test/UnitTests/: DataType_EncodeDecode6.cpp  DataType_EncodeDecode7.cpp  PDU_Factory.cpp  PDU_ProtocolFamily5.cpp
tests/: CMakeLists.txt  ConversionTests.cpp  DataType_EncodeDecode5.cpp  DataType_EncodeDecode6.cpp  DataType_EncodeDecode7.cpp  DataType_Enums.cpp  Extras.cpp  KDataStreamTests.cpp  Network.cpp  PDU_Clone.cpp  PDU_Clone6.cpp  PDU_EncodeDecode5.cpp  PDU_EncodeDecode6.cpp  PDU_EncodeDecode7.cpp  PDU_Factory.cpp  PDU_FactoryDecoder5.cpp  PDU_ProtocolFamily5.cpp  PDU_ProtocolFamily6.cpp  PDU_ProtocolFamily7.cpp  util.cpp  utils.cpp
(+1073 files in other folders)
